@@ -1,5 +1,10 @@
 2007-07-18 David A. Mellis <dam@mellis.org>
 
+	* stk500.c (stk500_read_sig_bytes): Don't use the universal SPI
+	command to read the device signature; do it explicitly.
+
+2007-07-18 David A. Mellis <dam@mellis.org>
+
 	* stk500v2.c (stk500v2_getsync): Return if using an AVRISPmkII as
 	it might not respond to the sync attempts.
 
